--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                 <h2>1H 2026 PRO SS&E Priorities Summary</h2>
             </div>
             <div class="summary-accordion">
-                <!-- 1. Strategy - Expanded by default -->
-                <div class="accordion-item expanded" data-section="strategy">
+                <!-- 1. Strategy -->
+                <div class="accordion-item" data-section="strategy">
                     <button class="accordion-header strategy-header">
                         <i class="ph ph-chart-line-up accordion-icon"></i>
                         <span class="accordion-title">Strategy</span>
@@ -279,7 +279,7 @@
                             <li>DSR Meeting in a Box</li>
                             <li>DSR Onboarding</li>
                             <li>Digital Commerce Reinforcement</li>
-                            <li>TBD: Strategic Planning/Best-in-Class JBPs/QBRs</li>
+                            <li>Timing TBD: Strategic Planning/Best-in-Class JBPs/QBRs</li>
                         </ul>
                         <p class="focus-label">End-User Sellers:</p>
                         <ul>
@@ -309,7 +309,6 @@
                         <p class="focus-label">Omni-Capable Edge Curriculum:</p>
                         <ul>
                             <li>CPG: Leveraging Tech, Economic Thinking, Supply Chain</li>
-                            <li>Retail: Strategic Planning</li>
                             <li>PRO: Strategic Selling, Insights</li>
                         </ul>
                         <p class="focus-label">2026 Events & Initiatives:</p>
@@ -321,11 +320,11 @@
                         <p class="focus-label">Tech Stack Initiatives:</p>
                         <ul>
                             <li>Second Nature Approval & Launch</li>
-                            <li>Galaxy: Strategy, Migration, & Launch</li>
+                            <li>Galaxy LMS: Strategy, Migration, & Launch</li>
                         </ul>
                         <p class="focus-label">ENGAGE & EQUIP Enhancements:</p>
                         <ul>
-                            <li>ENGAGE Upgrades: PRO Upgrades</li>
+                            <li>ENGAGE Upgrades</li>
                             <li>EQUIP Base Curriculum Maintenance</li>
                         </ul>
                     </div>
