--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                         <ul>
                             <li>Negotiations Training</li>
                             <li>Leveraging Technology</li>
+                            <li>Elevate Onboarding Transformation</li>
                         </ul>
                         <p class="focus-label">Supervisors:</p>
                         <ul>
